--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="review">
     <title>review</title>
 
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
     <div class="body__container">
@@ -149,6 +149,18 @@
                                     <td>tfoot 2</td>
                                 </tr>
                             </tfoot>
+                        </table>
+                    </li>
+
+                    <li>
+                        <table>
+                            <caption>rowspan, colspan</caption>
+
+                            <thead>
+                                <tr>
+                                    <td></td>
+                                </tr>
+                            </thead>
                         </table>
                     </li>
                 </ul>
