link css to form.html

--- a/tag,table.html
+++ b/tag,table.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>tag, table</title>
   
   <link rel="stylesheet" href="./css/index.css">
 </head>
@@ -12,7 +12,7 @@
   <div class="body__container">
     <!-- TAG -->
     <section class="section__tag section">
-      <div class='summary'>tag</div>
+      <h2 class='summary'>tag</h2>
       <div class='section'>
         <h1>h1</h1>
       </div>
@@ -112,7 +112,7 @@
     </section>
 
     <section class="section__table section">
-      <div class='summary'>table</div>
+      <h2 class='summary'>table</h2>
 
       <div>
         <ul>
