--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <meta name="author" content="ian">
   <meta name="description" content="review">
   <title>review</title>
+
+  <link rel="stylesheet" href="./css/index.css">
 </head>
 
 <body>
