--- a/public/index.html
+++ b/public/index.html
@@ -23,12 +23,20 @@
 
               <ul class="menu">
                 <li>
-                  <a href="./tag,table.html">tag,table</a>
+                  <a href="../src/html_part/tag,table.html">tag,table</a>
                 </li>
 
                 <li>
-                  <a href="./form.html">form</a>
+                  <a href="../src/html_part/form.html">form</a>
                 </li>
+              </ul>
+            </li>
+
+            <li>
+              <button>CSS</button>
+
+              <ul>
+                <li><a href="../src/css_part/basic.html">기본</a></li>
               </ul>
             </li>
           </ul>
