--- a/src/html_part/form.html
+++ b/src/html_part/form.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>form</title>
+  <title>html form</title>
 
-  <link rel="stylesheet" href="./css/index.css">
+  <link rel="stylesheet" href="./main.css">
 </head>
 
 <body>
   <div class="body__container">
     <section class="section section__form">
+      <a href="../../public/index.html">HOME</a>
       <h2 class="summary">form,input 태그</h2>
 
       <form action="" autocomplete="off">
