--- a/src/html_part/notice.html
+++ b/src/html_part/notice.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +8,7 @@
 </head>
 <body>
   <div class="body__container">
+    <a href="../../public/index.html">HOME</a>
     <h1>공지사항</h1>
   </div>
 </body>
