--- a/src/html_part/tag,table.html
+++ b/src/html_part/tag,table.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>tag, table</title>
+  <title>html tag, table</title>
   
-  <link rel="stylesheet" href="./css/index.css">
+  <link rel="stylesheet" href="./main.css">
 </head>
 
 <body>
   <div class="body__container">
+    <a href="../../public/index.html">HOME</a>
     <!-- TAG -->
     <section class="section__tag section">
       <h2 class='summary'>tag</h2>
