--- a/src/css_part/basic.html
+++ b/src/css_part/basic.html
@@ -95,7 +95,39 @@
           </blockquote>
         </li>
         <li>
-          <h4>텍스트 그림자 text-shadow</h4>
+          <h4>텍스트 그림자 text-shadow : none | &lt;가로 거리&gt; &lt;세로 거리&gt; &lt;번짐 정도&gt; &lt;색상&gt;</h4>
+          <blockquote>
+            <p style="text-shadow: 0.2rem 0.2rem 0.1rem red; font-size: 2rem;">text-shadow: 0.2rem 0.2rem 0.1rem red; font-size: 2rem;</p>
+            <p style="text-shadow: -0.2rem -0.2rem 0.5rem #000; font-size: 2rem; color: #fff; text-decoration: underline;">text-shadow: -0.2rem -0.2rem 0.5rem #000; font-size: 2rem; color: #fff; text-decoration: underline;</p>
+          </blockquote>
+        </li>
+        <li>
+          <h4>텍스트 대소 문자 변환 text-transform</h4>
+          <blockquote>
+            <p style="text-transform: none">none</p>
+            <p style="text-transform: capitalize">capitalize</p>
+            <p style="text-transform: uppercase">UPPERcase</p>
+            <p style="text-transform: lowercase">LOWERcase</p>
+          </blockquote>
+        </li>
+        <li>
+          <h4>글자 간격 조절 letter-spacing, word-spacing</h4>
+          <blockquote>
+            <p style="letter-spacing: 0.5em">letter-spacing: 0.5em</p>
+            <p style="word-spacing: 5em">word-spacing: 5em 5em 5em 5em 5em</p>
+          </blockquote>
+        </li>
+        <li>
+          <h4></h4>
+          <blockquote>
+            <p></p>
+          </blockquote>
+        </li>
+        <li>
+          <h4></h4>
+          <blockquote>
+            <p></p>
+          </blockquote>
         </li>
       </ul>
 
