--- a/src/css_part/basic.html
+++ b/src/css_part/basic.html
@@ -14,7 +14,7 @@
   <div class="body__container">
     <a href="../../public/index.html">HOME</a>
     <section class="section section__basic">
-      <h1 class="summary">CSS 기본</h1>
+      <h1 class="summary">CSS 기본, 텍스트 스타일</h1>
 
       <ul>
         <li>
@@ -117,17 +117,79 @@
             <p style="word-spacing: 5em">word-spacing: 5em 5em 5em 5em 5em</p>
           </blockquote>
         </li>
+      </ul>
+
+      <h1 class="summary">목록 스타일</h1>
+
+      <ul>
         <li>
-          <h4></h4>
+          <h4>불릿 모양과 번호 스타일 list-style-type</h4>
           <blockquote>
-            <p></p>
+            <ul style="list-style-type: disc;">
+              <li>disc</li>
+            </ul>
+            <ul style="list-style-type: circle;">
+              <li>circle</li>
+            </ul>
+            <ul style="list-style-type: square;">
+              <li>square</li>
+            </ul>
+            <ul style="list-style-type: decimal;">
+              <li>decimal, 1부터 시작하는 10진수</li>
+              <li>decimal, 1부터 시작하는 10진수</li>
+            </ul>
+            <ul style="list-style-type: decimal-leading-zero;">
+              <li>decimal-leading-zero, 앞에 0이 붙는 10진수</li>
+              <li>decimal-leading-zero, 앞에 0이 붙는 10진수</li>
+            </ul>
+            <ul style="list-style-type: lower-roman;">
+              <li>lower-roman</li>
+              <li>lower-roman</li>
+            </ul>
+            <ul style="list-style-type: upper-roman;">
+              <li>upper-roman</li>
+              <li>upper-roman</li>
+            </ul>
+            <ul style="list-style-type: lower-alpha;">
+              <li>lower-alpha, 알파벳 소문자</li>
+            </ul>
+            <ul style="list-style-type: lower-latin;">
+              <li>lower-latin, 알파벳 소문자</li>
+            </ul>
+            <ul style="list-style-type: upper-alpha;">
+              <li>upper-alpha 또는 upper-latin, 알파벳 대문자</li>
+              <li>upper-alpha 또는 upper-latin, 알파벳 대문자</li>
+            </ul>
+            <ul style="list-style-type: none;">
+              <li>none</li>
+            </ul>
           </blockquote>
         </li>
         <li>
-          <h4></h4>
-          <blockquote>
-            <p></p>
-          </blockquote>
+          <h4>블릿 대신 이미지 list-style-image</h4>
+          <ul style="list-style-image: url(../../img/bullet-image.png);">
+            <li>1</li>
+            <li>2</li>
+          </ul>
+        </li>
+        <li>
+          <h4>목록을 들여 쓰는 list-style-position</h4>
+          <ul>
+            <li>스타일 없음</li>
+          </ul>
+          <ul style="list-style-position: inside;">
+            <li>inside</li>
+          </ul>
+          <ul style="list-style-position: outside;">
+            <li>outside, 기본값</li>
+          </ul>
+        </li>
+        <li>
+          <h4>목록 속성을 한꺼번에 표시하는 list-style</h4>
+          <p>list-style-type, list-style-image, list-style-position 한꺼번에 표시</p>
+          <ul style="list-style: url(../../img/bullet-image.png) inside;">
+            <li>list-style: url(../../img/bullet-image.png) inside;</li>
+          </ul>
         </li>
       </ul>
 
