--- a/src/css_part/basic.html
+++ b/src/css_part/basic.html
@@ -193,6 +193,59 @@
         </li>
       </ul>
 
+      <h1 class="summary">표 스타일</h1>
+      
+      <ul>
+        <li>
+          <h4>표 제목의 위치를 정해 주는 caption-side, 테두리 border, 셀 사이 여백 border-spacing</h4>
+          <blockquote>
+            <table style="border: 0.2rem solid black; font-size: 2rem; caption-side: bottom; border-spacing: 1rem;">
+              <caption style="font-size: 1.5rem; font-weight: 700;">표 caption-side: bottom;</caption>
+              <thead>
+                <tr>
+                  <th style="border: 0.2rem dotted black">1행 1열</th>
+                  <th style="border: 0.2rem dotted black">1행 2열</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td style="border: 0.2rem dotted black">2행 1열</td>
+                  <td style="border: 0.2rem dotted black">2행 2열</td>
+                </tr>
+              </tbody>
+              <tfoot>
+                <tr>
+                  <td colspan="2" style="border: 0.2rem dotted black; text-align: center;">3행</td>
+                </tr>
+              </tfoot>
+            </table>
+          </blockquote>
+        </li>
+        <li>
+          <h4>표와 셀 테두리 합쳐주는 border-collapse</h4>
+          <blockquote>
+            <table style="border: 0.2rem solid black; font-size: 2rem; border-collapse: collapse;">
+              <thead>
+                <tr>
+                  <th style="border: 0.2rem dotted black">1행 1열</th>
+                  <th style="border: 0.2rem dotted black">1행 2열</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td style="border: 0.2rem dotted black">2행 1열</td>
+                  <td style="border: 0.2rem dotted black">2행 2열</td>
+                </tr>
+              </tbody>
+              <tfoot>
+                <tr>
+                  <td colspan="2" style="border: 0.2rem solid black; text-align: center;">3행</td>
+                </tr>
+              </tfoot>
+            </table>
+          </blockquote>
+        </li>
+      </ul>
     </section>
   </div>
 </body>
