--- a/public/index.html
+++ b/public/index.html
@@ -35,8 +35,9 @@
             <li>
               <button>CSS</button>
 
-              <ul>
-                <li><a href="../src/css_part/basic.html">기본</a></li>
+              <ul class="menu">
+                <li><a href="../src/css_part/basic.html">기본, 텍스트, 목록, 표 스타일</a></li>
+                <li><a href="../src/css_part/box-model.html">박스 모델</a></li>
               </ul>
             </li>
           </ul>
