--- a/src/css_part/box-model.html
+++ b/src/css_part/box-model.html
@@ -13,7 +13,6 @@
     <a href="../../public/index.html">HOME</a>
     <section class="section section__box-model">
       <h1 class="summary">박스 모델</h1>
-
       <ul>
         <li>
           <h4>블록레벨 요소, h1, div, p, ...</h4>
@@ -68,6 +67,216 @@
             <div style="width: 25rem; height: 5rem; border: 1px solid #000; box-shadow: 0.3rem 0.3rem 0.5rem 0.3rem #aaa;">box-shadow: 0.3rem 0.3rem 0.5rem 0.3rem #aaa;</div>
             <div style="width: 25rem; height: 5rem; border: 1px solid #000; box-shadow: 0.3rem 0.3rem 0.5rem 0.3rem #aaa inset; margin-top: 1rem;">box-shadow: 0.3rem 0.3rem 0.5rem 0.3rem #aaa <span style="color: red;">inset;</span></div>
           </blockquote>
+        </li>
+      </ul>
+
+      <h1 class="summary">테두리 스타일 지정</h1>
+      <ul>
+        <li>
+          <h4>박스 모델의 방향</h4>
+          <blockquote>
+            top -> right -> bottom -> left (시계방향)
+          </blockquote>  
+        </li>
+        <li>
+          <h4>테두리 스타일을 지정하는 border-style</h4>
+          <ul>
+            <li><p>none, 기본값<div style="width: 5rem; height: 5rem; border: none;"></div></p></li>
+            <li><p>
+              hidden, 감춤, 표 border-collapse: collapse일 때 다른 테두리도 감춤
+              <div style="width: 5rem; height: 5rem; border: 0.1rem hidden #000;"></div>
+              -표, border: 0.1rem hidden #000; border-collapse: collapse;
+              <table style="border: 0.1rem hidden #000; border-collapse: collapse;">
+                <thead>
+                  <tr>
+                    <th style="border: 0.1rem solid #000">1행 1열</th>
+                    <th style="border: 0.1rem solid #000">1행 2열</th>
+                    <th style="border: 0.1rem solid #000">1행 3열</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td style="border: 0.1rem solid #000">2행 1열</td>
+                    <td style="border: 0.1rem solid #000">2행 2열</td>
+                    <td style="border: 0.1rem solid #000">2행 3열</td>
+                  </tr>
+                </tbody>
+                <tfoot>
+                  <tr>
+                    <td colspan="3" style="border: 0.1rem solid #000">3열</td>
+                  </tr>
+                </tfoot>
+              </table>
+            </p></li>
+            <li> 
+              <p>solid, 실선
+                <div style="width: 5rem; height: 5rem; border: 0.1rem solid #000;"></div>
+              </p>
+            </li>
+            <li>
+              <p>dotted, 점선
+                <div style="width: 5rem; height: 5rem; border: 0.1rem dotted #000;"></div>
+              </p>
+            </li>
+            <li>
+              <p>dashed, 짧은 직선
+                <div style="width: 5rem; height: 5rem; border: 0.5rem dashed #000;"></div>
+              </p>
+            </li>
+            <li>
+              <p>double, 이중선, 0.5rem, border-width: 1rem
+                <div style="width: 5rem; height: 5rem; border: 0.5rem double #000; border-width: 1rem"></div>
+              </p>
+            </li>
+            <li>
+              <p>groove, 창에 조각한 것처럼, 홈이 파인 듯 입체 느낌
+                <div style="width: 5rem; height: 5rem; border: 1rem groove #aaa;"></div>
+              </p>
+            </li>
+            <li>
+              <p>inset
+                <div style="width: 5rem; height: 5rem; border: 1rem inset #aaa;"></div>
+                표<br>border-collapse: seperate(기본값)일 경우<br>border: 1rem inset #aaa;
+                <table style="border: 1rem inset #aaa;">
+                  <thead>
+                    <tr>
+                      <th style="border: 0.1rem solid #000">1행 1열</th>
+                      <th style="border: 0.1rem solid #000">1행 2열</th>
+                      <th style="border: 0.1rem solid #000">1행 3열</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td style="border: 0.1rem solid #000">2행 1열</td>
+                      <td style="border: 0.1rem solid #000">2행 2열</td>
+                      <td style="border: 0.1rem solid #000">2행 3열</td>
+                    </tr>
+                  </tbody>
+                  <tfoot>
+                    <tr>
+                      <td colspan="3" style="border: 0.1rem solid #000">3열</td>
+                    </tr>
+                  </tfoot>
+                </table>
+                표<br>border-collapse: collapse일 경우<br>border: 1rem inset #aaa;<br>border-collapse: collapse;
+                <table style="border: 1rem inset #aaa; border-collapse: collapse;">
+                  <thead>
+                    <tr>
+                      <th style="border: 0.1rem solid #000">1행 1열</th>
+                      <th style="border: 0.1rem solid #000">1행 2열</th>
+                      <th style="border: 0.1rem solid #000">1행 3열</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td style="border: 0.1rem solid #000">2행 1열</td>
+                      <td style="border: 0.1rem solid #000">2행 2열</td>
+                      <td style="border: 0.1rem solid #000">2행 3열</td>
+                    </tr>
+                  </tbody>
+                  <tfoot>
+                    <tr>
+                      <td colspan="3" style="border: 0.1rem solid #000">3열</td>
+                    </tr>
+                  </tfoot>
+                </table>
+              </p>
+            </li>
+            <li>
+              <p>outset
+                <div style="width: 5rem; height: 5rem; border: 1rem outset #aaa;"></div>
+                표<br>border-collapse: seperate(기본값)일 경우<br>border: 1rem outset #aaa;
+                <table style="border: 1rem outset #aaa;">
+                  <thead>
+                    <tr>
+                      <th style="border: 0.1rem solid #000">1행 1열</th>
+                      <th style="border: 0.1rem solid #000">1행 2열</th>
+                      <th style="border: 0.1rem solid #000">1행 3열</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td style="border: 0.1rem solid #000">2행 1열</td>
+                      <td style="border: 0.1rem solid #000">2행 2열</td>
+                      <td style="border: 0.1rem solid #000">2행 3열</td>
+                    </tr>
+                  </tbody>
+                  <tfoot>
+                    <tr>
+                      <td colspan="3" style="border: 0.1rem solid #000">3열</td>
+                    </tr>
+                  </tfoot>
+                </table>
+                표<br>border-collapse: collapse일 경우<br>border: 1rem outset #aaa;<br>border-collapse: collapse;
+                <table style="border: 1rem outset #aaa; border-collapse: collapse;">
+                  <thead>
+                    <tr>
+                      <th style="border: 0.1rem solid #000">1행 1열</th>
+                      <th style="border: 0.1rem solid #000">1행 2열</th>
+                      <th style="border: 0.1rem solid #000">1행 3열</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td style="border: 0.1rem solid #000">2행 1열</td>
+                      <td style="border: 0.1rem solid #000">2행 2열</td>
+                      <td style="border: 0.1rem solid #000">2행 3열</td>
+                    </tr>
+                  </tbody>
+                  <tfoot>
+                    <tr>
+                      <td colspan="3" style="border: 0.1rem solid #000">3열</td>
+                    </tr>
+                  </tfoot>
+                </table>
+              </p>
+            </li>
+            <li>
+              <p>ridge
+                <div style="width: 5rem; height: 5rem; border: 1rem ridge #aaa;"></div>
+              </p>
+            </li>
+          </ul>
+        </li>
+        <li>
+          <h4>테두리 두께를 지정하는 border-width</h4>
+          <blockquote>
+            <p>border-width: 1rem</p>
+            <div style="width: 5rem; height: 5rem; border: 0.1rem solid #000; border-width: 1rem;"></div>
+            <p>border-top-width: 1rem</p>
+            <div style="width: 5rem; height: 5rem; border: 0.1rem solid #000; border-top-width: 1rem;"></div>
+            <p>border-width: 0.1rem 0.2rem 0.3rem 0.4rem</p>
+            <div style="width: 5rem; height: 5rem; border: 0.1rem solid #000; border-width: 0.1rem 0.2rem 0.3rem 0.4rem"></div>
+          </blockquote>
+        </li>
+        <li>
+          <h4>border-color</h4>
+          <blockquote>
+            <p>border-color: red</p>
+            <div style="width: 5rem; height: 5rem; border: 0.1rem solid #000; border-width: 0.1rem 0.2rem 0.3rem 0.4rem; border-color: red;"></div>
+            <p>border-top-color: red</p>
+            <div style="width: 5rem; height: 5rem; border: 0.1rem solid #000; border-width: 0.1rem 0.2rem 0.3rem 0.4rem; border-top-color: red;"></div>
+          </blockquote>
+        </li>
+        <li>
+          <h4>한 번에 지정 border: 0.5rem solid #000;</h4>
+          <div style="width: 5rem; height: 5rem; border: 0.5rem solid #000"></div>
+        </li>
+        <li>
+          <h4>둥근 테두리 border-radius</h4>
+          <blockquote>
+            <p>border-radius: 1.5rem</p>
+            <div style="width: 5rem; height: 5rem; border: 0.2rem solid #000; border-radius: 1.5rem;"></div>
+            <p>border-radius: 50%(또는 너비 크기의 반), 원</p>
+            <div style="width: 5rem; height: 5rem; border: 0.2rem solid #000; border-radius: 50%;"></div>
+            <p>border-top-left-radius: 1.5rem</p>
+            <div style="width: 5rem; height: 5rem; border: 0.2rem solid #000; border-top-left-radius: 1.5rem;"></div>
+            <p>border-radius: 1.5rem/1rem(가로 반지름 / 세로 반지름), 타원</p>
+            <div style="width: 5rem; height: 5rem; border: 0.2rem solid #000; border-radius: 1.5rem/1rem;"></div>
+            <p>border-top-left-radius: 1.5rem 1rem(가로 반지름  세로 반지름), 특정 꼭지점만 타원</p>
+            <div style="width: 5rem; height: 5rem; border: 0.2rem solid #000; border-top-left-radius: 1.5rem 1rem;"></div>
+          </blockquote>
+          
         </li>
       </ul>
     </section>
