--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,7 @@
         <div class="inner">
           <ul class="main-menu">
             <li class="top-level-entry-container">
-              <button id="HTML-button">HTML</button>
-
+              <button id="HTML-btn">HTML</button>
               <ul class="menu">
                 <li>
                   <a href="../src/html_part/tag,table.html">tag,table</a>
@@ -33,11 +32,11 @@
             </li>
 
             <li>
-              <button>CSS</button>
-
+              <button id="css-btn">CSS</button>
               <ul class="menu">
                 <li><a href="../src/css_part/basic.html">기본, 텍스트, 목록, 표 스타일</a></li>
                 <li><a href="../src/css_part/box-model.html">박스 모델</a></li>
+                <li><a href="../src/css_part/layout.html">레이아웃</a></li>
               </ul>
             </li>
           </ul>
