index.html css update

--- a/public/index.html
+++ b/public/index.html
@@ -15,23 +15,22 @@
 <body>
   <div class="body__container">
     <header class="section">
+      <div class="title">
+        <div class="subject">review</div>
+        <div class="description">HTML + CSS + JS</div>
+      </div>
       <div class="menu-group">
         <div class="inner">
           <ul class="main-menu">
             <li class="top-level-entry-container">
               <button id="HTML-btn">HTML</button>
               <ul class="menu">
-                <li>
-                  <a href="../src/html_part/tag,table.html">tag,table</a>
-                </li>
-
-                <li>
-                  <a href="../src/html_part/form.html">form</a>
-                </li>
+                <li><a href="../src/html_part/tag,table.html">tag,table</a></li>
+                <li><a href="../src/html_part/form.html">form</a></li>
               </ul>
             </li>
 
-            <li>
+            <li class="top-level-entry-container">
               <button id="css-btn">CSS</button>
               <ul class="menu">
                 <li><a href="../src/css_part/basic.html">기본, 텍스트, 목록, 표 스타일</a></li>
