--- a/src/css_part/layout.html
+++ b/src/css_part/layout.html
@@ -178,6 +178,18 @@
                 </dd>
               </dl>
             </li>
+            <li>
+              <dl>
+                <dt>예제</dt>
+                <dd style="width: 2000px;">
+                  <header style="width: 1200px; height: 120px; line-height: 120px; text-align: center; border: 1px solid #000; box-sizing: border-box; background: #aaa;">헤더</header>
+                  <div style="float: left; width:250px; height: 600px; line-height: 600px; text-align: center; border: 1px solid #000; box-sizing: border-box; background: #90bdf0">사이드 바</div>
+                  <div style="float: left; width:800px; height: 600px; line-height: 600px; text-align: center; border: 1px solid #000; box-sizing: border-box; background: #fff">본문</div>
+                  <div style="float: left; width:150px; height: 600px; line-height: 600px; text-align: center; border: 1px solid #000; box-sizing: border-box; background: #90bdf0">사이드 바</div>
+                  <footer style="clear: left; width: 1200px; height: 100px; line-height: 100px; text-align: center; border: 1px solid #000; box-sizing: border-box; background: #aaa;">푸터</footer>
+                </dd>
+              </dl>
+            </li>
           </ul>
         </li>
       </ul>
