--- a/src/css_part/layout.html
+++ b/src/css_part/layout.html
@@ -192,6 +192,60 @@
             </li>
           </ul>
         </li>
+        <li>
+          <h4>웹 요소 위치 지정</h4>
+          <ul>
+            <li>
+              <dl style="height: 1050px;">
+                <dt>left, right, top, bottom</dt>
+                <dd style="position: relative; width: 1000px; height: 1000px; background: #aaa;">
+                  <h4>position: relative;</h4>
+                  <div style="position: absolute; left: 50px; top: 50px; width: 200px; border: 0.1rem solid #000;">
+                    <b>position: absolute; left: 50px; top: 50px;</b><br>
+                    jordan retro 4 toro bravo jordan retro 4 toro bravo jordan retro 4 toro bravo 
+                    jordan retro 4 toro bravo jordan retro 4 toro bravo jordan retro 4 toro bravo
+                  </div>
+                  <div style="position: absolute; right: 50px; top: 50px; width: 200px; border: 0.1rem solid #000;">
+                    <b>position: absolute; right: 50px; top: 50px;</b><br>
+                    jordan retro 4 toro bravo jordan retro 4 toro bravo jordan retro 4 toro bravo 
+                    jordan retro 4 toro bravo jordan retro 4 toro bravo jordan retro 4 toro bravo
+                  </div>
+                  <div style="position: absolute; left: 100px; bottom: 200px; width: 200px; border: 0.1rem solid #000;">
+                    <b>position: absolute; left: 100px; bottom: 200px;</b><br>
+                    jordan retro 4 toro bravo jordan retro 4 toro bravo jordan retro 4 toro bravo 
+                    jordan retro 4 toro bravo jordan retro 4 toro bravo jordan retro 4 toro bravo
+                    jordan retro 4 toro bravo jordan retro 4 toro bravo jordan retro 4 toro bravo
+                    jordan retro 4 toro bravo jordan retro 4 toro bravo jordan retro 4 toro bravo
+                  </div>
+                  <div style="position: absolute; right: 0px; bottom: 0px; width: 200px; border: 0.1rem solid #000;">
+                    <b>position: absolute; right: 0px; bottom: 0px;</b><br>
+                    jordan retro 4 toro bravo jordan retro 4 toro bravo jordan retro 4 toro bravo 
+                    jordan retro 4 toro bravo jordan retro 4 toro bravo jordan retro 4 toro bravo
+                  </div>
+                </dd>
+              </dl>
+            </li>
+            <li>
+              <p>배치 방법 지정 position</p>
+              <ul>
+                <li>static : 문서의 흐름에 맞춰 배치, 기본값</li>
+                <li>relative : 위칫값을 지정할 수 있다는 점을 제외하면 static과 같음</li>
+                <li>absolute : relative값을 사용한 상위 요소를 기준으로 위치를 지정해 배치</li>
+                <li>fixed : 브라우저 창을 기준으로 위치를 지정해 배치</li>
+              </ul>
+            </li>
+            <li>
+              <dl>
+                <dt>예제</dt>
+                <dd style="position: relative;">
+                  <p>img위에 텍스트 배치</p>
+                  <img src="../../img/Barkley.jpg" alt="바클리">
+                  <p style="position: absolute; left: 150px; bottom: 20px; color: #fff; font-size: 2rem; font-weight: 700;">바클리</p>
+                </dd>
+              </dl>
+            </li>
+          </ul>
+        </li>
       </ul>
     </section>
   </div>
