--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,13 @@
                 <li><a href="../src/css_part/layout.html">레이아웃</a></li>
               </ul>
             </li>
+
+            <li class="top-level-entry-container">
+              <button id="js-btn">JS</button>
+              <ul class="menu">
+                <li><a href="../src/css_part/basic.html">기본</a></li>
+              </ul>
+            </li>
           </ul>
         </div>
       </div>
