--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
             <li class="top-level-entry-container">
               <button id="js-btn">JS</button>
               <ul class="menu">
-                <li><a href="../src/css_part/basic.html">기본</a></li>
+                <li><a href="../src/">기본</a></li>
               </ul>
             </li>
           </ul>
