--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,7 @@
                 <li><a href="../src/css_part/basic.html">기본, 텍스트, 목록, 표 스타일</a></li>
                 <li><a href="../src/css_part/box-model.html">박스 모델</a></li>
                 <li><a href="../src/css_part/layout.html">레이아웃</a></li>
+                <li><a href="../src/css_part/background.html">배경</a></li>
               </ul>
             </li>
 
