--- a/src/css_part/background.html
+++ b/src/css_part/background.html
@@ -94,6 +94,44 @@
                 </tbody>
               </table>
             </dd>
+            <dd>
+              <ul>
+                <li>
+                  <dl>
+                    <dt>repeat</dt>
+                    <dd>
+                      <div style="width: 30rem; height: 30rem; border: 0.1rem solid #000">
+                        <div style="background-image: url('../../img/Barkley.jpg'); width: 100%; height: 100%;"></div>
+                      </div>
+                    </dd>
+                  </dl>
+                </li>
+                <li>
+                  <dt>repeat-x</dt>
+                  <dd>
+                    <div style="width: 30rem; height: 30rem; border: 0.1rem solid #000">
+                      <div style="background-repeat: repeat-x; background-image: url('../../img/Barkley.jpg'); width: 100%; height: 100%;"></div>
+                    </div>
+                  </dd>
+                </li>
+                <li>
+                  <dt>repeat-y</dt>
+                  <dd>
+                    <div style="width: 30rem; height: 30rem; border: 0.1rem solid #000">
+                      <div style="background-repeat: repeat-y; background-image: url('../../img/Barkley.jpg'); width: 100%; height: 100%;"></div>
+                    </div>
+                  </dd>
+                </li>
+                <li>
+                  <dt>no-repeat</dt>
+                  <dd>
+                    <div style="width: 30rem; height: 30rem; border: 0.1rem solid #000">
+                      <div style="background-repeat: no-repeat; background-image: url('../../img/Barkley.jpg'); width: 100%; height: 100%;"></div>
+                    </div>
+                  </dd>
+                </li>
+              </ul>
+            </dd>
           </dl>
         </li>
       </ul>
